--- a/BirthdayAssignment/Modules/Birthday/BirthdayViewController.storyboard
+++ b/BirthdayAssignment/Modules/Birthday/BirthdayViewController.storyboard
@@ -19,35 +19,38 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1Nd-uN-a8t">
                                 <rect key="frame" x="50" y="103" width="293" height="526.33333333333337"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BTM-zG-dBc">
+                                    <view contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BTM-zG-dBc">
                                         <rect key="frame" x="0.0" y="0.0" width="293" height="233.33333333333334"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" axis="vertical" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="tZQ-jk-SfF">
-                                                <rect key="frame" x="0.0" y="38.333333333333343" width="293" height="156.66666666666666"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="tZQ-jk-SfF">
+                                                <rect key="frame" x="0.0" y="23.333333333333329" width="293" height="186.66666666666669"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TODAY CRISTIANO RONALDO IS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLr-I6-6xe">
-                                                        <rect key="frame" x="21.666666666666671" y="0.0" width="249.66666666666663" height="20.333333333333332"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" text="TODAY CRISTIANO RONALDO IS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLr-I6-6xe">
+                                                        <rect key="frame" x="53.666666666666671" y="0.0" width="185.66666666666663" height="50.333333333333336"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ouy-DI-Tj7">
-                                                        <rect key="frame" x="41" y="33.333333333333314" width="211" height="90"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ouy-DI-Tj7">
+                                                        <rect key="frame" x="41" y="63.333333333333329" width="211" height="84.999999999999986"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Left_swirls" translatesAutoresizingMaskIntoConstraints="NO" id="pfi-r4-6va">
-                                                                <rect key="frame" x="0.0" y="22.333333333333343" width="52" height="45"/>
+                                                                <rect key="frame" x="0.0" y="20" width="52" height="45"/>
                                                             </imageView>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="5" translatesAutoresizingMaskIntoConstraints="NO" id="he2-f3-ac6">
-                                                                <rect key="frame" x="74" y="0.0" width="63" height="90"/>
+                                                                <rect key="frame" x="74" y="0.0" width="63" height="85"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="85" id="i45-mX-jz9"/>
+                                                                </constraints>
                                                             </imageView>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Right_swirls" translatesAutoresizingMaskIntoConstraints="NO" id="yni-xr-giq">
-                                                                <rect key="frame" x="159" y="22.333333333333343" width="52" height="45"/>
+                                                                <rect key="frame" x="159" y="20" width="52" height="45"/>
                                                             </imageView>
                                                         </subviews>
                                                     </stackView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MONTHS OLD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="guk-t8-ZLf" userLabel="I">
-                                                        <rect key="frame" x="91.333333333333343" y="136.33333333333334" width="110.66666666666666" height="20.333333333333343"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="MONTHS OLD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="guk-t8-ZLf" userLabel="Subtitle Label">
+                                                        <rect key="frame" x="78.666666666666657" y="161.33333333333337" width="136" height="25.333333333333343"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -58,9 +61,11 @@
                                             <constraint firstAttribute="trailing" secondItem="tZQ-jk-SfF" secondAttribute="trailing" id="1SJ-ZH-U6d"/>
                                             <constraint firstItem="tZQ-jk-SfF" firstAttribute="leading" secondItem="BTM-zG-dBc" secondAttribute="leading" id="4mb-jB-U3f"/>
                                             <constraint firstItem="tZQ-jk-SfF" firstAttribute="centerY" secondItem="BTM-zG-dBc" secondAttribute="centerY" id="CLg-o4-7Va"/>
+                                            <constraint firstItem="tZQ-jk-SfF" firstAttribute="top" relation="greaterThanOrEqual" secondItem="BTM-zG-dBc" secondAttribute="top" constant="20" id="m4a-cQ-VjQ"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="tZQ-jk-SfF" secondAttribute="bottom" constant="20" id="rnr-xT-ey3"/>
                                         </constraints>
                                     </view>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Default_place_holder_blue" translatesAutoresizingMaskIntoConstraints="NO" id="cLv-CT-PMm">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Default_place_holder_blue" translatesAutoresizingMaskIntoConstraints="NO" id="cLv-CT-PMm" customClass="CircularImageView" customModule="BirthdayAssignment" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="233.33333333333331" width="293" height="292.99999999999994"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="cLv-CT-PMm" secondAttribute="height" multiplier="1:1" id="Bm8-at-TB0"/>
@@ -78,14 +83,12 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="bg_ blue"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="1Nd-uN-a8t" secondAttribute="trailing" constant="50" id="A4J-gR-HlI"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="1Nd-uN-a8t" secondAttribute="bottom" multiplier="1.3" id="Gi6-uR-XdY"/>
                             <constraint firstItem="fht-8e-UbB" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="HFo-NJ-dFD"/>
                             <constraint firstItem="Rfs-wg-XNP" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Kjx-pO-Nux"/>
                             <constraint firstItem="1Nd-uN-a8t" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="V8T-Tc-uSd"/>
                             <constraint firstAttribute="bottom" secondItem="fht-8e-UbB" secondAttribute="bottom" id="Ztj-ZP-eBj"/>
                             <constraint firstItem="1Nd-uN-a8t" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="ikb-kc-nEU"/>
-                            <constraint firstItem="1Nd-uN-a8t" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="50" id="jzC-qg-EtT"/>
                             <constraint firstAttribute="trailing" secondItem="fht-8e-UbB" secondAttribute="trailing" id="t5l-7M-cjf"/>
                             <constraint firstItem="fht-8e-UbB" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="wSk-8g-xL7"/>
                             <constraint firstItem="Rfs-wg-XNP" firstAttribute="top" secondItem="1Nd-uN-a8t" secondAttribute="bottom" constant="15" id="xF0-Ww-dHh"/>
@@ -103,6 +106,7 @@
                         <outlet property="babyImageView" destination="cLv-CT-PMm" id="eUY-jf-W9e"/>
                         <outlet property="backgroundImageView" destination="fht-8e-UbB" id="NDz-1d-fXZ"/>
                         <outlet property="contentTopConstraint" destination="V8T-Tc-uSd" id="r8D-Ep-9Ut"/>
+                        <outlet property="contentView" destination="1Nd-uN-a8t" id="jaO-2v-KIY"/>
                         <outlet property="subtitleLabel" destination="guk-t8-ZLf" id="NCx-HO-sMv"/>
                         <outlet property="titleLabel" destination="hLr-I6-6xe" id="Lle-56-XQ7"/>
                     </connections>
