--- a/BirthdayAssignment/Modules/Birthday/BirthdayViewController.storyboard
+++ b/BirthdayAssignment/Modules/Birthday/BirthdayViewController.storyboard
@@ -17,22 +17,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1Nd-uN-a8t">
-                                <rect key="frame" x="50" y="103" width="293" height="526.33333333333337"/>
+                                <rect key="frame" x="28" y="59" width="337" height="570.33333333333337"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BTM-zG-dBc">
-                                        <rect key="frame" x="0.0" y="0.0" width="293" height="233.33333333333334"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="337" height="233.33333333333334"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="tZQ-jk-SfF">
-                                                <rect key="frame" x="0.0" y="23.333333333333329" width="293" height="186.66666666666669"/>
+                                                <rect key="frame" x="0.0" y="36" width="337" height="161.66666666666666"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" text="TODAY CRISTIANO RONALDO IS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLr-I6-6xe">
-                                                        <rect key="frame" x="53.666666666666671" y="0.0" width="185.66666666666663" height="50.333333333333336"/>
+                                                        <rect key="frame" x="14.333333333333343" y="0.0" width="308.33333333333326" height="25.333333333333332"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ouy-DI-Tj7">
-                                                        <rect key="frame" x="41" y="63.333333333333329" width="211" height="84.999999999999986"/>
+                                                        <rect key="frame" x="63" y="38.333333333333343" width="211" height="85"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Left_swirls" translatesAutoresizingMaskIntoConstraints="NO" id="pfi-r4-6va">
                                                                 <rect key="frame" x="0.0" y="20" width="52" height="45"/>
@@ -49,7 +49,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="MONTHS OLD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="guk-t8-ZLf" userLabel="Subtitle Label">
-                                                        <rect key="frame" x="78.666666666666657" y="161.33333333333337" width="136" height="25.333333333333343"/>
+                                                        <rect key="frame" x="100.66666666666666" y="136.33333333333334" width="136" height="25.333333333333343"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -66,7 +66,7 @@
                                         </constraints>
                                     </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Default_place_holder_blue" translatesAutoresizingMaskIntoConstraints="NO" id="cLv-CT-PMm" customClass="CircularImageView" customModule="BirthdayAssignment" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="233.33333333333331" width="293" height="292.99999999999994"/>
+                                        <rect key="frame" x="0.0" y="233.33333333333331" width="337" height="336.99999999999994"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="cLv-CT-PMm" secondAttribute="height" multiplier="1:1" id="Bm8-at-TB0"/>
                                         </constraints>
@@ -95,7 +95,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qC0-uB-Hrh">
-                        <barButtonItem key="rightBarButtonItem" image="square.and.arrow.up" catalog="system" style="plain" id="3P0-F7-0h9">
+                        <barButtonItem key="rightBarButtonItem" image="square.and.arrow.up" catalog="system" style="done" id="3P0-F7-0h9">
                             <connections>
                                 <action selector="didTapShareButton" destination="Y6W-OH-hqX" id="TM3-9V-D7B"/>
                             </connections>
@@ -114,24 +114,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1066.4122137404579" y="-2.1126760563380285"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="SzG-o0-9Ul">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bSh-pp-wvU" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RI9-nj-cvk">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="P7R-Lc-721"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="C4P-G2-IPh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="379" y="-2"/>
         </scene>
     </scenes>
     <resources>
